@@ -1,20 +1,25 @@
-FROM eclipse-temurin:22 AS build
+# Usa un'immagine base con OpenJDK 22
+FROM eclipse-temurin:22
 
+# Installa Maven
+RUN apt-get update && apt-get install -y maven wget unzip
+
+# Imposta la directory di lavoro
 WORKDIR /app
-COPY . /app
-RUN apt update && apt install -y maven
 
+# Scarica JavaFX SDK
+RUN wget https://download2.gluonhq.com/openjfx/22/openjfx-22_linux-x64_bin-sdk.zip && \
+    unzip openjfx-22_linux-x64_bin-sdk.zip && \
+    mv javafx-sdk-22 /opt/javafx
+
+# Copia i file del progetto nel container
+COPY . .
+
+# Imposta il module-path per JavaFX
+ENV MODULE_PATH="/opt/javafx/lib"
 
 # Compila il progetto con Maven
 RUN mvn clean package -DskipTests
 
-# Usa OpenJDK 22 per eseguire l'applicazione
-FROM eclipse-temurin:22 AS runtime
-WORKDIR /app
-COPY --from=build /app/target/demo-1.0-SNAPSHOT-jar-with-dependencies.jar /app/target/demo-1.0-SNAPSHOT-jar-with-dependencies.jar
-
-
-# Espone la porta 42069
-EXPOSE 42069
-
-ENTRYPOINT ["java", "-jar", "/app/target/demo-1.0-SNAPSHOT-jar-with-dependencies.jar"]
+# Esegui l'applicazione con i moduli JavaFX
+CMD ["java", "--module-path", "/opt/javafx/lib", "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics", "-jar", "target/demo.jar"]
